# geo

./: README.md
c/: CMakeLists.txt  README.md  area.c  area.h  collinear.h  fitcirc.h  fitline.c  fitline.h  fitzone.c  fitzone.h  pt.h  test_area.h  test_collinear.h  test_line.h  test_main.c  test_pt.c  test_pt.h  test_vertical.c  test_vertical.h  vertical.h
circle/perl/: CircleFit.pm  circle.pl  test.pl
julia/: fitline.jl  test.jl
line/c/: CMakeLists.txt  README.md  area.c  area.h  collinear.c  fitcirc.c  fitcirc.h  fitline.c  fitline.h  gen_makefile.sh  main.c  makefile  pt.c  pt.h  test_area.c  test_collinear.c  test_collinear.h  test_line.c  test_main.c  test_pt.c  test_pt.h  vertical.c
line/julia/: fit.jl
line/perl/: line.pl
sphere/perl/: sphere.pl
